Use drf-spectacular for openapi
Regenerate openapi schema and client
