# backend/features/exception/exception_serializer.py
@@ -1,0 +1,6 @@
+from rest_framework import serializers
+
+
+class ExceptionSerializer(serializers.Serializer):
+    status_code = serializers.IntegerField(required=False)
+    detail = serializers.CharField(required=False)
